@@ -1,5 +1,7 @@
 Changes with Apache 1.3.2
 
+  *) API: new ap_uuencode() function [Doug MacEachern]
+
   *) API: scan_script_header_err_core() now "public" and renamed
      ap_scan_script_header_err_core() [Doug MacEachern]
 
